<resources>
    <string name="app_name">BizSmat</string>
    <string name="defstr">Change language</string>
    <string name="app_logo">AppLogo</string>
    <string name="defcreol">KAP</string>
    <string name="defcreola">PAP</string>
    <string name="defhidden">hidden</string>
    <string name="cusnewk">Yes</string>
    <string name="cusnewl">Cancel</string>
    <string name="cusnewm">Close</string>
    <string name="genfro_str">From</string>
    <string name="gen_tostr">To</string>
    <string name="genactive_str">Active</string>
    <string name="geninactive_str">Inactive</string>
    <string name="gen_str">Add</string>
    <string name="gen_stra">Select</string>
    <string name="gen_strb">Product</string>
    <string name="gen_strc">Price</string>
    <string name="gen_strd">Quantity</string>
    <string name="gen_stre">Customer</string>
    <string name="gen_strf">Save</string>
    <string name="gen_strg">New</string>
    <string name="gen_strh">Date</string>
    <string name="gen_stri">.....</string>
    <string name="assign_usr">Enter your shopname</string>
    <string name="assign_usra">Enter your full names</string>
    <string name="assign_usrb">Enter your password</string>
    <string name="assign_usrba">Enter your phone number</string>
    <string name="assign_usrbb">Enter the activation code</string>
    <string name="assign_usrc">Assign user</string>
    <string name="assign_usrd">Back-up data</string>
    <string name="assign_usre">Activate app</string>
    <string name="assign_usrf">New user</string>
    <string name="assign_usrg">Returning user</string>
    <string name="home_src">Products</string>
    <string name="home_srca">Sales</string>
    <string name="home_srcb">Stocks</string>
    <string name="home_srcc">Debts</string>
    <string name="home_srcd">Analytics</string>
    <string name="home_srce">Admin</string>
    <string name="home_image">Homeimage</string>
    <string name="perm_txt">Hello, the evaluation period is over. Please contact Avintangu
        at support@avintangu.com to get a perpetual licence
    </string>
    <string name="title_activity_products">Products</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">www.avintangu.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="prdct_str">Active</string>
    <string name="prdct_stra">Inactive</string>
    <string name="prdct_strb">New</string>
    <string name="prdct_strc">Products</string>
    <string name="prdct_strd">Product categories</string>
    <string name="prdct_strdins">Categories</string>
    <string name="prdct_stre">Set date</string>
    <string name="prdct_strf">Category</string>
    <string name="prdct_strg">Name</string>
    <string name="prdct_strh">Scale</string>
    <string name="prdct_stri">Average buying price</string>
    <string name="prdct_stria">Buying price</string>
    <string name="prdct_strj">Selling price</string>
    <string name="prdct_strk">Delete</string>
    <string name="prdct_strl">ID</string>
    <string name="prdct_strm">Average buying price</string>
    <string name="prdct_strn">Profit</string>
    <string name="prdct_stro">List</string>
    <string name="prdct_strp">Categories</string>
    <string name="sale_str">Sales</string>
    <string name="sale_strc">New sale</string>
    <string name="sale_strd">Product</string>
    <string name="sale_stre">Selling price</string>
    <string name="sale_strf">Quantity</string>
    <string name="sale_strg">Total cost</string>
    <string name="sale_strh">0</string>
    <string name="sale_stri">Date</string>
    <string name="sale_strj">Amount paid</string>
    <string name="sale_strk">Change</string>
    <string name="sale_strl">Summary</string>
    <string name="title_activity_inventory">Inventory</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_inzentory">Inzentory</string>
    <string name="invent_str">Stocks</string>
    <string name="invent_strra">Balances</string>
    <string name="invent_stra">Stocks entry</string>
    <string name="invent_straa">Entry</string>
    <string name="invent_strb">New stock</string>
    <string name="invent_strc">Product</string>
    <string name="invent_strd">Unit buying price</string>
    <string name="invent_strda">Unit selling price</string>
    <string name="invent_stre">Quantity</string>
    <string name="invent_strf">Date</string>
    <string name="invent_strg">Calculator</string>
    <string name="invent_strh">Batch calculator</string>
    <string name="invent_stri">Buying price</string>
    <string name="invent_strj">Count</string>
    <string name="invent_strk">Selling price</string>
    <string name="debt_str">Summary</string>
    <string name="debt_strins">Customer</string>
    <string name="debt_stra">Payments</string>
    <string name="debt_strb">Debt summary</string>
    <string name="debt_strc">Payments</string>
    <string name="debt_strd">Phone No.</string>
    <string name="debt_stre">Amount paid</string>
    <string name="debt_strf">Edit customer</string>
    <string name="debt_strg">Lend</string>
    <string name="debt_strh">New payment</string>
    <string name="debt_stri">New customer</string>
    <string name="debt_strj">Product</string>
    <string name="debt_strk">Average buying price</string>
    <string name="debt_strl">Current selling price</string>
    <string name="debt_strm">New selling price</string>
    <string name="debt_strn">Debts</string>
    <string name="litics_str">Sales</string>
    <string name="litics_stra">Categories</string>
    <string name="litics_strb">Profitability</string>
    <string name="litics_strc">Sales</string>
    <string name="litics_strd">Profit</string>
    <string name="litics_stre">Stocks</string>
    <string name="litics_strf">Total sales</string>
    <string name="litics_strg">Total revenue</string>
    <string name="litics_strh">Stocks balances</string>
    <string name="litics_stri">Sales</string>
    <string name="litics_strj">Sales trend</string>
    <string name="litics_strk">Tables</string>
    <string name="litics_strl">Charts</string>
    <string name="ordestr">Orders</string>
    <string name="ordestra">Prices-list</string>
    <string name="ordestrb">Orders</string>
    <string name="ordestrc">Date</string>
    <string name="ordestrd">Time</string>
    <string name="ordestre">Outlet</string>
    <string name="ordestrf">Distributor</string>
    <string name="ordestrg">Notes</string>
    <string name="ordestrh">Payment</string>
    <string name="ordestri">Product</string>
    <string name="ordestrj">Price</string>
    <string name="ordestrk">Quantity</string>
    <string name="ordestrl">Post</string>
    <string name="ordestrm">Name</string>
    <string name="ordestrn">Country</string>
    <string name="ordestro">Region</string>
    <string name="ordestrp">Town</string>
    <string name="ordestrq">Contact name</string>
    <string name="ordestrr">Phone</string>
    <string name="ordestrs">E-mail</string>
    <string name="ordestrt">Close</string>
    <string name="ordestru">Receive</string>
    <string name="ordestrv">Total</string>
    <string name="admin_str">Admin</string>
    <string name="admin_stra">Recycle bin</string>
    <string name="admin_strb">Introduction</string>
    <string name="admin_strc">Assign user</string>
    <string name="admin_strd">Products</string>
    <string name="admin_stre">Sales</string>
    <string name="admin_strf">Stocks</string>
    <string name="admin_strg">Debts</string>
    <string name="admin_strh">Analytics</string>
    <string name="admin_stri">Admin module</string>
    <string name="admin_strj">User manual</string>
    <string name="admin_strk">Owner</string>
    <string name="admin_strl">Phone No.</string>
    <string name="admin_strm">App version</string>
    <string name="admin_strn">BizCk: 7.0</string>
    <string name="admin_stro">Sync data</string>
    <string name="admin_strp">Update app</string>
    <string name="admin_strq">Refresh user data</string>
    <string name="admin_strr">Activate app</string>
    <string name="admin_strs">Tools</string>
    <string name="admin_strt">User manual</string>
    <string name="admin_stru">Shops</string>
    <string name="usrman_str">Home screen</string>
    <string name="usrman_stra">Bizsmat application is purposed to enable business people to:</string>
    <string name="usrman_strb">a) Create an electronic price-list that groups products in categories</string>
    <string name="usrman_stro">Assign user</string>
    <string name="usrman_strp">a) Enter your user-name</string>
    <string name="usrman_strq">b) Enter the default password (New user)</string>
    <string name="usrman_strr">c) Enter your new password</string>
    <string name="usrman_strs">d) Click the assign user button to assign the app to your account</string>
    <string name="usrman_strt">e) The app will be assigned to your account and it will open</string>
    <string name="usrman_strct">Analytics</string>
    <string name="usrman_strcu">- This module curates the data and presents it in a desirable format in tables or
        charts. This module can be customized based on the client\'s needs
    </string>
    <string name="usrman_strcw">> Open the sales module by clicking the sales icon on the home screen. This will
        open the sales module then click the analytics tab which will open the sales analysis by product.
    </string>
    <string name="usrman_strcx">> You can go back by clicking the back button. This view is displayed based on two dates
        displayed on the left side of the floating menu icon
    </string>
    <string name="usrman_strcy">> To adjust the dates range, clicked on the date icon and select either
        of the calendar icons to change the dates.
    </string>
    <string name="usrman_strcz">> Click the menu icon and you can select any tables or charts on the
        left pop-up menu</string>
    <string name="usrman_strda">> Profitability charts</string>
    <string name="usrman_strdb">> Sales trends chars</string>
    <string name="usrman_strdc">Admin module</string>
    <string name="usrman_strdd">- This modules will enable you to sync data, update app, refresh data, recover deleted
        records
        or view the user manual
    </string>
    <string name="usrman_strde">- > Admin functions</string>
    <string name="usrman_strdf">> Click the admin icon on the home screen to open the admin module. This view displays
        the
        user name, phone number and the app version
    </string>
    <string name="usrman_strdg">> To sync data - Click the sync button</string>
    <string name="usrman_strdh">> To update app - Click the update app button</string>
    <string name="usrman_strdi">> To refresh user data - click the refresh user data button</string>
    <string name="usrman_strdk">- > Recycle bin</string>
    <string name="usrman_strdl">> Open the admin module > click the menu icon and select the recycle bin option on the
        left
        pop-up menu
    </string>
    <string name="usrman_strdm">> This displays all the reports that have been deleted. Click the item on the first
        column on any
        of the reports and you will get a recovery prompt which will ask you to confirm the recovery
        action. Click yes to recover or click cancel to go back
    </string>
    <string name="usrman_strdn">- > User manual</string>
    <string name="usrman_strdo">> Open the admin module > Click the menu icon and select any topic under the user manual
        title to view
    </string>
</resources>