<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/usrmanliticparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="50dp">

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="14dp"
        android:paddingTop="10dp"
        android:paddingRight="14dp"
        app:alignContent="flex_start"
        app:alignItems="flex_start"
        app:flexDirection="column"
        app:flexWrap="wrap">

        <TextView
            android:id="@+id/liticstxtvew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="14dp"
            android:paddingTop="0dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strct"
            android:textStyle="bold"
            app:layout_flexGrow="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/liticsimg"
            app:layout_maxHeight="500dp" />

        <TextView
            android:id="@+id/liticstxtvewa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="0dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strcu"
            app:layout_flexGrow="1" />

        <TextView
            android:id="@+id/liticstxtvewb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strcw"
            app:layout_flexGrow="1" />

        <TextView
            android:id="@+id/liticstxtvewc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strcx"
            app:layout_flexGrow="1" />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/liticsimga"
            app:layout_maxHeight="500dp" />

        <TextView
            android:id="@+id/liticstxtvewd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="0dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strcy"
            app:layout_flexGrow="1" />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/liticsimgb"
            app:layout_maxHeight="500dp" />

        <TextView
            android:id="@+id/liticstxtvewe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="0dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strcz"
            app:layout_flexGrow="1" />

        <TextView
            android:id="@+id/liticstxtvewf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strda"
            app:layout_flexGrow="1" />

        <TextView
            android:id="@+id/liticstxtvewg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="14dp"
            android:paddingTop="14dp"
            android:paddingRight="14dp"
            android:text="@string/usrman_strdb"
            app:layout_flexGrow="1" />
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>
