<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".launch.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/imgscale"
        android:orientation="vertical" />

    <!-- Top constraint-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/usasstopcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <!-- Left constraint-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/usassleftcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <!-- Middle constraint-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/usassmidcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/usrdetalcont"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:alignContent="center"
        app:alignItems="center"
        app:flexDirection="column"
        app:flexWrap="nowrap"
        app:justifyContent="center"
        app:layout_constraintBottom_toTopOf="@+id/assusbottomconst"
        app:layout_constraintEnd_toEndOf="@+id/usassrightcons"
        app:layout_constraintStart_toStartOf="@+id/usassleftcons"
        app:layout_constraintTop_toBottomOf="@+id/usasstopcons">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:alignContent="center"
            app:alignItems="center"
            app:flexDirection="row"
            app:flexWrap="wrap"
            app:justifyContent="center">

            <ImageButton
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/trans"
                android:contentDescription="@string/app_logo"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/avlogo" />
        </com.google.android.flexbox.FlexboxLayout>

        <Spinner
            android:id="@+id/spinassgnusr"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="-3dp"
            android:layout_marginTop="26dp"
            android:background="@drawable/spincomb_resoc"
            android:popupBackground="@drawable/spinback_resoc"
            android:textColor="#ff000000"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edtxtasn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:autofillHints=""
            android:background="@drawable/edtxtcomb_resoc"
            android:hint="@string/assign_usr"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/edtxtasna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:autofillHints=""
            android:background="@drawable/edtxtcomb_resoc"
            android:hint="@string/assign_usra"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/edtxtasnb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:autofillHints=""
            android:background="@drawable/edtxtcomb_resoc"
            android:hint="@string/assign_usrb"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/edtxtasnc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:autofillHints=""
            android:background="@drawable/edtxtcomb_resoc"
            android:hint="@string/assign_usrba"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/edtxtasnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:autofillHints=""
            android:background="@drawable/edtxtcomb_resoc"
            android:hint="@string/assign_usrbb"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#ff000000" />

        <Button
            android:id="@+id/btnassn"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:layout_marginTop="26dp"
            android:background="@drawable/btncombresoc"
            android:padding="10dp"
            android:text="@string/assign_usrc"
            android:textAllCaps="false"
            android:textColor="#ffffffff" />
    </com.google.android.flexbox.FlexboxLayout>

    <!-- Right constraint-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/usassrightcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <!-- Bottom constraint-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/assusbottomconst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/usrtype"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="0dp"
        android:paddingLeft="30dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:gravity="left"
        android:textAllCaps="false"
        android:textAlignment="gravity"
        android:text="@string/assign_usrf"
        android:background="@drawable/usrtypecomb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/usassmidcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assusbottomconst" />
</androidx.constraintlayout.widget.ConstraintLayout>

